add the changes

--- a/scss/bootstrap.scss
+++ b/scss/bootstrap.scss
@@ -61,7 +61,8 @@ $headings-font-weight: bold;
 
 //card
 $card-spacer-x: 0rem;
-$card-cap-bg: $light;
+$card-bg: $light;
+$card-cap-bg: none;
 //container-xl
 $gutter-x: 0rem;
 
