--- a/scss/bootstrap.scss
+++ b/scss/bootstrap.scss
@@ -66,4 +66,7 @@ $card-cap-bg: none;
 //container-xl
 $gutter-x: 0rem;
 
+//modal
+$modal-dialog-margin: 1rem;
+
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
