--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -20,7 +20,7 @@ html {
   height: 500px;
   // padding-top: 13rem;
   background: linear-gradient(rgba(60, 7, 7, 0.5), rgba(0, 0, 0, 0.5)),
-    url("../images/header-background-mobile.png");
+    url("../images/header-background-mobile.webp");
   background-repeat: no-repeat;
   background-position-x: left;
   background-size: cover;
