--- a/scss/bootstrap.scss
+++ b/scss/bootstrap.scss
@@ -2,11 +2,14 @@
 $font-family-sans-serif: "Open Sans", sans-serif;
 
 //colors
-$primary: #f36463;
+// $primary: #f36463;
+$primary: #f28d8c;
+// $primary: #f2d871;
 $secondary: #35353a;
 $light: #f0ede9;
 $body-bg: $light;
-$dark: #050505;
+// $dark: #050505;
+$dark: #1e0706;
 $info: #f1d6d6;
 
 //Spacing
