--- a/scss/gallery-styles.scss
+++ b/scss/gallery-styles.scss
@@ -1,3 +1,27 @@
+.container {
+  max-width: 1000px;
+  margin: auto;
+}
 .image-container img {
-  max-height: 500px;
+  max-height: 300px;
+  max-width: 250px;
+  box-shadow: 0px 4px 8px rgba(131, 122, 122, 0.8);
+}
+@media (min-width: 576px) {
+  .image-container img {
+    max-height: 500px;
+    max-width: 300px;
+  }
+}
+@media (min-width: 768px) {
+  .image-container img {
+    max-height: 500px;
+    max-width: 300px;
+  }
+}
+@media (min-width: 992px) {
+  .image-container img {
+    max-height: 500px;
+    max-width: 300px;
+  }
 }
