home page background changes

--- a/scss/bootstrap.scss
+++ b/scss/bootstrap.scss
@@ -1,5 +1,6 @@
 // Font
 $font-family-sans-serif: "Open Sans", sans-serif;
+// $font-family-sans-serif: "Poppins", sans-serif;
 
 //colors
 // $primary: #f36463;
