--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,6 +1,11 @@
 // html {
 //   scroll-behavior: smooth; /* Smooth scrolling */
 // }
+
+article {
+  background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" ><rect fill="%23ffffff" width="24" height="24"/><defs><linearGradient id="a" x1="0" x2="0" y1="0" y2="1" gradientTransform="rotate(12,0.5,0.5)"><stop offset="0" stop-color="%23FFCC00"/><stop offset="1" stop-color="%23F36463"/></linearGradient></defs><pattern id="b" width="20" height="20" patternUnits="userSpaceOnUse"><circle fill="%23ffffff" cx="10" cy="10" r="10"/></pattern><rect width="100%" height="100%" fill="url(%23a)"/><rect width="100%" height="100%" fill="url(%23b)" fill-opacity="0.13"/></svg>');
+  background-size: cover;
+}
 .navbar {
   transition: all 0.5s ease-in-out;
   box-shadow: 0 2px 15px -3px rgba(0, 0, 0, 0.16),
@@ -21,7 +26,6 @@
   section {
     padding-top: 6rem;
     scroll-behavior: smooth;
-    background-color: #f1d6d6;
   }
 }
 // header
@@ -76,8 +80,19 @@
   }
 }
 
+.xl-text {
+  font-size: 65px;
+}
+@media (max-width: 992px) {
+  h1 {
+    font-size: calc(1.2rem + 1vw);
+  }
+  .xl-text {
+    font-size: 45px;
+  }
+}
 .hero-text {
-  text-shadow: 5px 5px 10px black;
+  text-shadow: rgb(9, 9, 9) 1px 0 10px;
 }
 
 //service
