--- a/scss/gallery-styles.scss
+++ b/scss/gallery-styles.scss
@@ -2,26 +2,33 @@
   max-width: 1000px;
   margin: auto;
 }
-.image-container img {
-  max-height: 300px;
-  max-width: 250px;
+
+#photos img {
+  // max-width: 300px;
+  max-height: 500px;
   box-shadow: 0px 4px 8px rgba(131, 122, 122, 0.8);
 }
-@media (min-width: 576px) {
-  .image-container img {
-    max-height: 500px;
-    max-width: 300px;
-  }
-}
-@media (min-width: 768px) {
-  .image-container img {
-    max-height: 500px;
-    max-width: 300px;
-  }
-}
-@media (min-width: 992px) {
-  .image-container img {
-    max-height: 500px;
-    max-width: 300px;
-  }
-}
+
+// .image-container img {
+//   max-height: 300px;
+//   max-width: 250px;
+
+// }
+// @media (min-width: 576px) {
+//   .image-container img {
+//     max-height: 500px;
+//     max-width: 300px;
+//   }
+// }
+// @media (min-width: 768px) {
+//   .image-container img {
+//     max-height: 500px;
+//     max-width: 300px;
+//   }
+// }
+// @media (min-width: 992px) {
+//   .image-container img {
+//     max-height: 500px;
+//     max-width: 300px;
+//   }
+// }
