--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,8 @@ article {
 
 .navbar {
   transition: all 0.5s ease-in-out;
-  box-shadow: 0 2px 15px -3px rgba(0, 0, 0, 0.16), 0 10px 20px -2px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 15px -3px rgba(0, 0, 0, 0.16),
+    0 10px 20px -2px rgba(0, 0, 0, 0.1);
 }
 
 @media (max-width: 769px) {
@@ -25,7 +26,8 @@ article {
 }
 .header {
   height: calc(100vh - 5.69rem);
-  background: linear-gradient(rgba(60, 7, 7, 0.5), rgba(0, 0, 0, 0.5)), url("../images/header-background-mobile-original.jpeg");
+  background: linear-gradient(rgba(60, 7, 7, 0.5), rgba(0, 0, 0, 0.5)),
+    url("../images/header-background-mobile-original.jpeg");
   background-repeat: no-repeat;
   background-position-x: left;
   background-size: cover;
@@ -38,7 +40,8 @@ article {
   .header {
     padding: 0px;
     height: calc(100vh - 5.69rem);
-    background: linear-gradient(rgba(60, 7, 7, 0.5), rgba(0, 0, 0, 0.5)), url("../images/header-large-compressed.jpeg");
+    background: linear-gradient(rgba(60, 7, 7, 0.5), rgba(0, 0, 0, 0.5)),
+      url("../images/header-large-compressed.jpeg");
     background-repeat: no-repeat;
     background-position-x: left;
     background-size: cover;
@@ -48,7 +51,8 @@ article {
 @media (min-width: 992px) {
   .header {
     height: calc(100vh - 5.69rem);
-    background: linear-gradient(rgba(60, 7, 7, 0.5), rgba(0, 0, 0, 0.5)), url("../images/header-large-compressed.jpeg");
+    background: linear-gradient(rgba(60, 7, 7, 0.5), rgba(0, 0, 0, 0.5)),
+      url("../images/header-large-compressed.jpeg");
     background-repeat: no-repeat;
     background-position-x: center;
     background-size: cover;
@@ -76,7 +80,8 @@ article {
 }
 
 .card {
-  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2),
+    0 1px 5px 0 rgba(0, 0, 0, 0.12);
   border-radius: 5px;
 }
 
@@ -122,14 +127,15 @@ article {
   }
 }
 .photo-container {
-  margin-right: 0.25rem;
+  margin-right: 0.5rem;
 }
 
 .carousel-item {
   background-color: #fff;
   border: 1px solid white;
   border-radius: 10px;
-  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2),
+    0 1px 5px 0 rgba(0, 0, 0, 0.12);
 }
 
 .carousel-control-next {
