--- a/css/glider.css
+++ b/css/glider.css
@@ -1,4 +1,4 @@
-@import "../node_modules/glider-js/glider.min.css";
+/* @import "../node_modules/glider-js/glider.min.css"; */
 .glider-next {
   right: -30px;
   top: 50%;
